--- a/index.html
+++ b/index.html
@@ -1,34 +1,191 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Leaflet Step-1</title>
 
-  <!-- Leaflet CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-    crossorigin="" />
+    <meta charset="UTF-8">
 
-  <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="static/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>USGS Earthquake Visualization</title>
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+
+    <style>
+
+        #map {
+
+            height: 600px;
+
+        }
+
+    </style>
+
 </head>
 
 <body>
 
-  <!-- The div that holds our map -->
-  <div id="map"></div>
 
-  <!-- Leaflet JS -->
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-    crossorigin=""></script>
-  <!-- D3 JavaScript -->
-  <script src="https://d3js.org/d3.v7.min.js"></script>
-  <!-- Our JavaScript -->
-  <script type="text/javascript" src="static/js/logic.js"></script>
+
+<div id="map"></div>
+
+
+
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+
+
+<script>
+
+    // Function to get earthquake data
+
+    function getEarthquakeData() {
+
+        $.ajax({
+
+            url: 'https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_day.geojson',
+
+            success: function (data) {
+
+                visualizeData(data.features);
+
+            }
+
+        });
+
+    }
+
+
+
+    // Function to create the map and visualize the earthquake data
+
+    function visualizeData(earthquakeData) {
+
+        var map = L.map('map').setView([0, 0], 2);
+
+
+
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+
+            attribution: '© OpenStreetMap contributors'
+
+        }).addTo(map);
+
+
+
+        // Define a function to set marker style based on magnitude and depth
+
+        function getMarkerStyle(magnitude, depth) {
+
+            return {
+
+                radius: magnitude * 3,
+
+                fillColor: getColor(depth),
+
+                color: '#000',
+
+                weight: 1,
+
+                opacity: 1,
+
+                fillOpacity: 0.8
+
+            };
+
+        }
+
+
+
+        // Define a function to get color based on depth
+
+        function getColor(depth) {
+
+            var colors = ['#fef0d9', '#fdcc8a', '#fc8d59', '#e34a33', '#b30000'];
+
+            return depth > 300 ? colors[4] :
+
+                depth > 100 ? colors[3] :
+
+                    depth > 70 ? colors[2] :
+
+                        depth > 30 ? colors[1] :
+
+                            colors[0];
+
+        }
+
+
+
+        // Loop through earthquake data and add markers to the map
+
+        earthquakeData.forEach(function (quake) {
+
+            var coordinates = quake.geometry.coordinates;
+
+            var magnitude = quake.properties.mag;
+
+            var depth = coordinates[2];
+
+            var marker = L.circleMarker([coordinates[1], coordinates[0]], getMarkerStyle(magnitude, depth)).addTo(map);
+
+
+
+            // Add popup with additional information
+
+            marker.bindPopup(`<b>Location:</b> ${quake.properties.place}<br/><b>Magnitude:</b> ${magnitude}<br/><b>Depth:</b> ${depth} km`);
+
+        });
+
+
+
+        // Create a legend
+
+        var legend = L.control({ position: 'bottomright' });
+
+
+
+        legend.onAdd = function (map) {
+
+            var div = L.DomUtil.create('div', 'info legend');
+
+            var depths = [0, 30, 70, 100, 300];
+
+            var labels = [];
+
+
+
+            for (var i = 0; i < depths.length; i++) {
+
+                div.innerHTML += `<i style="background:${getColor(depths[i] + 1)}"></i>${depths[i]}${(depths[i + 1] ? '&ndash;' + depths[i + 1] + ' km' : '+')}`
+
+            }
+
+
+
+            return div;
+
+        };
+
+
+
+        legend.addTo(map);
+
+    }
+
+
+
+    // Call the function to get earthquake data and visualize it
+
+    getEarthquakeData();
+
+</script>
+
+
+
 </body>
 
 </html>
